--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/plugin-transform-react-jsx": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/runtime": "^7.18.3",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@vitejs/plugin-legacy": "^1.8.2",
     "autoprefixer": "^10.4.7",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "core-js": "^3.22.8",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
@@ -33,14 +40,16 @@
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
     "vite": "^2.9.9",
-    "vite-plugin-solid": "^2.2.6"
+    "vite-plugin-legacy": "^2.1.0"
   },
   "dependencies": {
     "solid-js": "^1.4.2"
   },
   "browserslist": [
-    "> 1%",
+    "> 0.5%",
+    "IE 11",
     "last 2 versions",
-    "not ie < 11"
+    "Firefox ESR",
+    "not dead"
   ]
 }
