--- a/.github/workflows/metric_achievements.yml
+++ b/.github/workflows/metric_achievements.yml
@@ -1,4 +1,4 @@
-name: Followers
+name: Metrics
 on:
   # Schedule updates (each hour)
   schedule: [{cron: "0 * * * *"}]
@@ -28,7 +28,7 @@ jobs:
           template: classic
           base: ""
           config_timezone: Asia/Saigon
-          plugin_people: yes
-          plugin_people_limit: 24
-          plugin_people_size: 28
-          plugin_people_types: followers
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
