--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,14 +13,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
+          filename: metrics.achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
@@ -40,14 +33,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
+          filename: metrics.followers.svg
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
@@ -67,6 +53,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          filename: metrics.habit.svg
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
