--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -6,11 +6,19 @@ on:
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
-  achievements:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Checkout metrics branch
+        run: git checkout metrics
+
+      - name: Add achievements
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.achievements.svg
@@ -23,14 +31,12 @@ jobs:
           config_timezone: Asia/Saigon
           plugin_achievements: yes
           plugin_achievements_display: detailed
+          plugin_achievements_limit: 7
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
 
-  followers:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
+
+      - name: Add followers
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.followers.svg
@@ -46,11 +52,7 @@ jobs:
           plugin_people_size: 28
           plugin_people_types: followers
 
-  habit:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
+      - name: Add habit
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.habit.svg
