--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,22 +4,14 @@ on:
   schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: {branches: ["metrics"]}
 jobs:
-  build:
+  achievements:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Checkout metrics branch
-        run: git checkout metrics
-
-      - name: Add achievements
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           filename: metrics.achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -35,9 +27,12 @@ jobs:
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
 
-
-      - name: Add followers
-        uses: lowlighter/metrics@latest
+  followers:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
         with:
           filename: metrics.followers.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -52,8 +47,12 @@ jobs:
           plugin_people_size: 28
           plugin_people_types: followers
 
-      - name: Add habit
-        uses: lowlighter/metrics@latest
+  habit:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
         with:
           filename: metrics.habit.svg
           token: ${{ secrets.METRICS_TOKEN }}
