--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,16 +2,21 @@ name: Metrics
 on:
   # Schedule updates (each hour)
   schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
-  workflow_dispatch:
-  push: {branches: ["metrics"]}
 jobs:
-  achievements:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Checkout metrics branch
+        run: git checkout metrics
+
+      - name: Add achievements
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -27,12 +32,9 @@ jobs:
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
 
-  followers:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: lowlighter/metrics@latest
+
+      - name: Add followers
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.followers.svg
           token: ${{ secrets.METRICS_TOKEN }}
@@ -47,12 +49,8 @@ jobs:
           plugin_people_size: 28
           plugin_people_types: followers
 
-  habit:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: lowlighter/metrics@latest
+      - name: Add habit
+        uses: lowlighter/metrics@latest
         with:
           filename: metrics.habit.svg
           token: ${{ secrets.METRICS_TOKEN }}
