--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,6 +4,8 @@ on:
   schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
+  push:
+    branches: [metrics]
   workflow_call:
     secrets:
       METRICS_TOKEN:
