--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,29 +4,16 @@ on:
   schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push:
-    branches: [metrics]
-  workflow_call:
-    secrets:
-      METRICS_TOKEN:
-        required: true
+  push: {branches: ["master", "main"]}
 jobs:
-  build:
+  achievements:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: lowlighter/metrics@latest
         with:
-          fetch-depth: 0
-      - name: Checkout metrics branch
-        run: git checkout metrics
-
-      - name: Add achievements
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.achievements.svg
+          filename: "public/metrics/metrics.achievements.svg"
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
@@ -40,11 +27,14 @@ jobs:
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
 
-
-      - name: Add followers
-        uses: lowlighter/metrics@latest
+  followers:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.followers.svg
+          filename: "public/metrics/metrics.followers.svg"
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
@@ -57,10 +47,14 @@ jobs:
           plugin_people_size: 28
           plugin_people_types: followers
 
-      - name: Add habit
-        uses: lowlighter/metrics@latest
+  habit:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.habit.svg
+          filename: "public/metrics/metrics.habit.svg"
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
