--- a/.github/workflows/update-snk.yml
+++ b/.github/workflows/update-snk.yml
@@ -15,11 +15,11 @@ jobs:
         id: snake-gif
         with:
           github_user_name: DungGramer
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path: public/metrics/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: metrics
+          target_branch: master
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
