--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -67,3 +67,160 @@ jobs:
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
+
+  comment-reactions:
+  runs-on: ubuntu-latest
+  permissions:
+    contents: write
+  steps:
+    - uses: lowlighter/metrics@latest
+      with:
+        filename: "public/metrics/comment-reactions.svg"
+        token: ${{ secrets.METRICS_TOKEN }}
+
+        # Options
+        user: DungGramer
+        template: classic
+        base: ""
+        config_timezone: Asia/Saigon
+        plugin_reactions: yes
+        plugin_reactions_display: absolute
+        plugin_reactions_limit: 200
+        plugin_reactions_limit_discussions: 100
+        plugin_reactions_limit_discussions_comments: 100
+        plugin_reactions_limit_issues: 100
+
+  repositories-traffic:
+  runs-on: ubuntu-latest
+  permissions:
+    contents: write
+  steps:
+    - uses: lowlighter/metrics@latest
+      with:
+        filename: "public/metrics/repositories-traffic.svg"
+        token: ${{ secrets.METRICS_TOKEN }}
+
+        # Options
+        user: DungGramer
+        template: classic
+        base: ""
+        config_timezone: Asia/Saigon
+        plugin_traffic: yes
+
+  starlists:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          # Current configuration doesn't require a GitHub token
+          filename: "public/metrics/starlists.svg"
+          token: NOT_NEEDED
+
+          # Options
+          user: DungGramer
+          template: classic
+          base: ""
+          config_timezone: Asia/Saigon
+          plugin_starlists: yes
+          plugin_starlists_limit: 2
+          plugin_starlists_limit_languages: 8
+          plugin_starlists_limit_repositories: 2
+          plugin_starlists_shuffle_repositories: yes
+
+  github-skyline:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: "public/metrics/github-skyline.svg"
+          token: NOT_NEEDED
+
+          # Options
+          user: DungGramer
+          template: classic
+          base: ""
+          config_timezone: Asia/Saigon
+          plugin_skyline: yes
+          plugin_skyline_frames: 60
+          plugin_skyline_quality: 0.5
+          plugin_skyline_year: current-year
+
+  stack-overflow:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: "public/metrics/stack-overflow.svg"
+          token: NOT_NEEDED
+
+          # Options
+          user: DungGramer
+          template: classic
+          base: ""
+          config_timezone: Asia/Saigon
+          plugin_stackoverflow: yes
+          plugin_stackoverflow_limit: 2
+          plugin_stackoverflow_lines: 4
+          plugin_stackoverflow_lines_snippet: 2
+          plugin_stackoverflow_sections: answers-top, questions-recent
+          plugin_stackoverflow_user: 10695420
+
+  notable-contributions:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: "public/metrics/notable-contributions.svg"
+          token: ${{ secrets.METRICS_TOKEN }}
+
+          # Options
+          user: DungGramer
+          template: classic
+          base: ""
+          config_timezone: Asia/Saigon
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_notable_types: commit
+
+  lines-changed:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: "public/metrics/lines-changed.svg"
+          token: ${{ secrets.METRICS_TOKEN }}
+
+          # Options
+          user: DungGramer
+          template: classic
+          base: ""
+          config_timezone: Asia/Saigon
+          plugin_lines: yes
+
+  calendar:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: "public/metrics/calendar.svg"
+          token: ${{ secrets.METRICS_TOKEN }}
+
+          # Options
+          user: DungGramer
+          template: classic
+          base: ""
+          config_timezone: Asia/Saigon
+          plugin_calendar: yes
+          plugin_calendar_limit: 1
