--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
+  "name": "dunggramer-cv",
+  "version": "1.0.0",
   "description": "",
   "homepage": "https://dunggramer.github.io/DungGramer/",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
+    "start": "webpack serve --config ./config/webpack.config.js --open --progress --color ",
+    "build": "webpack --config ./config/webpack.config.js --progress --color --mode production",
+    "serve": "serve -s public",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -16,11 +15,11 @@
     "@babel/core": "^7.18.5",
     "@babel/plugin-transform-react-jsx": "^7.17.12",
     "@babel/preset-env": "^7.18.2",
-    "@babel/runtime": "^7.18.3",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@vitejs/plugin-legacy": "^1.8.2",
+    "@babel/preset-react": "^7.17.12",
     "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
     "core-js": "^3.22.8",
+    "css-loader": "^6.7.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
@@ -34,16 +33,16 @@
     "postcss-normalize": "^10.0.1",
     "postcss-scss": "^4.0.4",
     "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.9.1",
     "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^26.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
-    "vite": "^2.9.9",
-    "vite-plugin-legacy": "^2.1.0"
-  },
-  "dependencies": {
-    "solid-js": "^1.4.2"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "browserslist": [
     "> 0.5%",
