--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "homepage": "https://dunggramer.github.io/DungGramer/",
   "scripts": {
-    "start": "webpack serve --config ./config/webpack.config.js --open --progress --color ",
-    "build": "webpack --config ./config/webpack.config.js --progress --color --mode production",
+    "start": "webpack serve --config ./config/webpack.dev.js --open --progress --color ",
+    "build": "webpack --config ./config/webpack.prod.js --progress --color --mode production",
     "serve": "serve -s public",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -18,6 +18,8 @@
     "@babel/preset-react": "^7.17.12",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "browserslist": "^4.20.4",
+    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.22.8",
     "css-loader": "^6.7.1",
     "eslint": "^8.2.0",
@@ -27,6 +29,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.0.0",
@@ -40,9 +44,11 @@
     "stylelint-config-standard": "^26.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
+    "terser-webpack-plugin": "^5.3.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   },
   "browserslist": [
     "> 0.5%",
