--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "postcss-loader": "^7.0.0",
     "postcss-normalize": "^10.0.1",
     "postcss-scss": "^4.0.4",
+    "regenerator-runtime": "^0.14.1",
     "sass": "^1.52.3",
+    "sass-embedded": "^1.93.3",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.9.1",
@@ -54,10 +56,14 @@
     "webpack-merge": "^5.8.0"
   },
   "browserslist": [
-    "> 0.5%",
-    "IE 11",
-    "last 2 versions",
+    "> 0.01%",
+    "IE >= 6",
+    "last 5 versions",
     "Firefox ESR",
+    "Opera >= 10",
+    "Safari >= 3",
+    "Chrome >= 10",
+    "Firefox >= 3.6",
     "not dead"
   ]
 }
